--- a/style.css
+++ b/style.css
@@ -207,11 +207,11 @@ body {
   
 @keyframes appear{
   from {
-    @include transform(scale(0));
+    transform: scale(0);
     opacity:0;
   }
   to {
-    @include transform(scale(1));
+    transform: scale(1);
     opacity:1;
   }
 }
