--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); /* Inter */
-
-
-
 
 html, body{
-    height: 100%;
-    width: 100%;
     padding: 0;
     margin: 0;
 }
@@ -19,6 +13,31 @@ html{
     display: none;
 }
 
+.sections {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+
+}
+.secmain {
+  height: 100%;
+  width: 100%;
+}
+
+.patterns-sec2 {
+  position: absolute;
+  left: 71.5%;
+  top :10%;
+  height: 70%;
+  width: 25%;
+  z-index: -1;
+}
+
+.patterns-sec2 > img {
+  height: 100%;
+  width: 100%
+}
 .typewriter h1{
     font-size: 4em;
     color: orange;
@@ -55,7 +74,7 @@ html{
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     background-repeat: repeat;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .fadeup:hover {
@@ -68,30 +87,54 @@ html{
 .social {
     position: absolute;
     top: 70%;
-    left: 8%;
+    left: 10%;
 
 }
+
+
+
+#ghsvg {
+  height: 4em;
+  width: auto;
+}
+
+#ghsvg > path {
+  fill: white;
+}
+
+.social_gh:hover #ghsvg path {
+  transition: fill 200ms ease;
+  fill: #161614;
+}
+
+#lttsvg {
+  height: 4em;
+  width: auto;
+}
+
+#lttsvg{
+  fill: white
+}
+#lttsvg:hover {
+  transition: fill 200ms ease;
+  fill: rgb(254,75,1);
+}
+
 .social_gh, .social_ltt {
     box-shadow: 0px 110px 38px -26px black;
     height: 0;
     width: 0;
 }
 .social_ltt {
-    margin-left: 5em;
+    margin-left: 7em;
 }
 
-.social_gh:after {
-    content: url("assets/GitHub-Mark-Light-120px-plus.png");
-    display: inline-block;
-    transform: scale(0.5);
-    padding: 0;
-    margin: 0;
-    
-}
 .social_gh:before {
+  pointer-events: none;
     content: "RockSolid1106 on Github";
     display: inline-block;
     position: absolute;
+    transform: translate(-4.5em, -3.5em);
     border-color: white;
     border-width: 2px;
     border-radius: 0.2em;
@@ -103,30 +146,18 @@ html{
     text-align: center;
     opacity: 0;
     transition: 250ms all;
-    transform: translate(-20%, -2em);
     font-family: 'Roboto', sans-serif;
 }
 .social_gh:hover:before{
     opacity: 1;
 }
 
-.social_gh:hover:after, .social_ltt:hover:after {
-    animation: raiseup 300ms ease-out forwards;
-    -webkit-animation: raiseup 300ms ease-out forwards;
-}
-
-
-.social_ltt:after {
-    content: url("assets/lttlogo.png");
-    transform: scale(0.5);
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-}
 .social_ltt:before {
+  pointer-events: none;
     content: "RockSolid1106 on the Linus Tech Tips Forum";
     display: inline-block;
     position: absolute;
+    transform: translate(-4.5em, -4.5em);
     border-color: white;
     border-width: 2px;
     border-radius: 0.2em;
@@ -138,7 +169,6 @@ html{
     text-align: center;
     opacity: 0;
     transition: 250ms all;
-    transform: translate(-25%, -2.7em);
     font-family: 'Roboto', sans-serif;
 }
 .social_ltt:hover:before {
@@ -149,7 +179,6 @@ body {
     position:absolute;
     height: 100%;
     width: 100%;
-    z-index: 999;
     animation: blurin forwards ease-out 1s;
 }
 
@@ -194,6 +223,7 @@ body {
   #stats,
   .count-particles{
     -webkit-user-select: none;
+    user-select: none;
   }
   
   #stats{
@@ -205,16 +235,6 @@ body {
     border-radius: 0 0 3px 3px;
   }
   
-@keyframes appear{
-  from {
-    transform: scale(0);
-    opacity:0;
-  }
-  to {
-    transform: scale(1);
-    opacity:1;
-  }
-}
 
 .particles-js-canvas-el {
     opacity:1;
@@ -262,4 +282,263 @@ svg:hover polyline{
     stroke-dasharray: 0;
     animation: none;
   }
+}
+
+.pprogrammer {
+  position: absolute;
+  height: 50%;
+  width: 50%;
+  left: 10%;
+  top: 20%;
+  background: linear-gradient(to bottom, #033176, #040d21);
+  border-radius: 1em;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  font-family: "Inter", sans-serif;
+  padding: 3em;
+  opacity: 0;
+  transform: translateY(4em);
+}
+
+.pprogrammer > #pass {
+  position:absolute;
+  top: 7%;
+  left: 5%;
+  font-size: 3em;
+  color: #2ea651;
+  font-weight: 800;
+}
+
+.pprogrammer > p {
+  width: 90%;
+  height: 60%;
+  position:absolute;
+  left: 5%;
+  top: 20%;
+  color: white;
+  font-size: 1.3em;
+  text-justify: inter-word;
+}
+
+.appear {
+  animation: animfadein 600ms forwards ease;
+  -webkit-animation: animfadein 600ms forwards ease;
+}
+.disappear {
+  animation: animfadeout 600ms forwards ease;
+  -webkit-animation: animfadeout 600ms forwards ease;
+}
+
+.hrefanimunderline {
+  text-decoration: none;
+  color: #02edf5;
+  position:relative;
+
+}
+.hrefanimunderline::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #02edf5;
+  width: 100%;
+  height: 0.1em;
+  border-radius: 5px;
+  transform: scaleX(0);
+  transition: 250ms all ease-out;
+}
+
+.hrefanimunderline:hover::before {
+  transform: scaleX(1);
+}
+
+#venomsc {
+  pointer-events: none;
+  position: absolute;
+  top: -2%;
+  left: 50%;
+  border-radius: 0.4em;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  opacity: 0;
+}
+
+#cust {
+  left: 81%;
+  top: -75%;
+  position: absolute;
+  pointer-events: none;
+  border-radius: 0.4em;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  opacity: 0;
+}
+
+
+#ftwo {
+  text-decoration: none;
+  color: white;
+  cursor: text;
+
+
+}
+#likeftwo{
+  transition: color 200ms;
+}
+
+
+
+#sec3-pattern {
+  height: 75vh;
+  width: auto;
+  position: absolute;
+  left: 75%;
+  top: 9%;
+  overflow: hidden;
+}
+
+.amphotographer {
+  position: absolute;
+  height: 50%;
+  width: 50%;
+  left: 10%;
+  top: 20%;
+  background: linear-gradient(to bottom, #1595b6, rgba(31,38,103,0.9));
+  border-radius: 1em;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  font-family: "Inter", sans-serif;
+  padding: 3em;
+  opacity: 0;
+  transform: translateY(4em);
+}
+
+.amphotographer > #amat {
+  position:absolute;
+  top: 7%;
+  left: 5%;
+  font-size: 3em;
+  color: orange;
+  font-weight: 800;
+}
+
+.amphotographer > p {
+  width: 90%;
+  height: 60%;
+  position:absolute;
+  left: 5%;
+  top: 20%;
+  color: white;
+  font-size: 1.3em;
+  text-justify: inter-word;
+}
+
+
+.keybimages {
+  height: 15em;
+  width: auto;
+  /* display: none; */
+  position: absolute;
+  border-radius: 0.3em;
+
+}
+
+#keyb-1 {
+  pointer-events: none;
+  transition: all 400ms ease;
+  position: absolute;
+  top: 35%;
+  left: -10%;
+  height: 15em;
+  width: auto;
+  opacity: 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  
+
+}
+#keyb-2 {
+  pointer-events: none;
+  transition: all 400ms ease;
+  position: absolute;
+  top: 35%;
+  left: 43%;
+  height: 15em;
+  width: auto;
+  opacity: 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  
+
+}
+#keyb-3 {
+  pointer-events: none;
+  transition: all 400ms ease;
+  position: absolute;
+  top: 35%;
+  left: 96%;
+  height: 15em;
+  width: auto;
+  opacity: 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  
+
+}
+
+.keyb1-anim {
+  animation: keyb1 400ms ease forwards;
+  -webkit-animation: keyb1 400ms ease forwards;
+
+}
+.keyb2-anim {
+  animation: keyb2 400ms ease forwards;
+  -webkit-animation: keyb2 400ms ease forwards;
+
+}.keyb3-anim {
+  animation: keyb3 400ms ease forwards;
+  -webkit-animation: keyb3 400ms ease forwards;
+
+}
+
+#butt-1 {
+  pointer-events: none;
+  transition: all 400ms ease;
+  position: absolute;
+  top: 35%;
+  left: 8%;
+  height: 15em;
+  width: auto;
+  opacity: 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  
+}
+
+#butt-2 {
+  pointer-events: none;
+  transition: all 400ms ease;
+  position: absolute;
+  top: 35%;
+  left: 60%;
+  height: 15em;
+  width: auto;
+  opacity: 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  
+}
+#headphones {
+  pointer-events: none;
+  transition: all 400ms ease;
+  position: absolute;
+  top: 47%;
+  left: 57%;
+  height: 15em;
+  width: auto;
+  opacity: 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+#pen {
+  pointer-events: none;
+  transition: all 400ms ease;
+  position: absolute;
+  top: 47%;
+  left: 72%;
+  height: 15em;
+  width: auto;
+  opacity: 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
