Fixed sizes on customizer and dbot images

--- a/style.css
+++ b/style.css
@@ -354,18 +354,16 @@ svg:hover polyline{
 #venomsc {
   pointer-events: none;
   position: absolute;
-  top: -2%;
-  left: 50%;
+  height: 20vh;
   border-radius: 0.4em;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   opacity: 0;
 }
 
 #cust {
-  left: 81%;
-  top: -75%;
   position: absolute;
   pointer-events: none;
+  height: 70vh;
   border-radius: 0.4em;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   opacity: 0;
