--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ svg:hover polyline{
 #venomsc {
   pointer-events: none;
   position: absolute;
-  height: 20vh;
+  height:8.5em;
   border-radius: 0.4em;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   opacity: 0;
@@ -363,7 +363,7 @@ svg:hover polyline{
 #cust {
   position: absolute;
   pointer-events: none;
-  height: 70vh;
+  height: 32.5em;
   border-radius: 0.4em;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   opacity: 0;
